tests/baselines/reference/classWithoutExplicitConstructor.errors.txt
tests/cases/conformance/classes/constructorDeclarations/automaticConstructors/classWithoutExplicitConstructor.ts(7,10): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/conformance/classes/constructorDeclarations/automaticConstructors/classWithoutExplicitConstructor.ts(15,10): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/classes/constructorDeclarations/automaticConstructors/classWithoutExplicitConstructor.ts (2 errors) ====
    class C {
        x = 1
        y = 'hello';
    }
    
    var c = new C();
    var c2 = new C(null); // error
             ~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    
    class D<T extends Date> {
        x = 2
        y: T = null;
    }
    
    var d = new D();
    var d2 = new D(null); // error
             ~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.